# kaggle_favorita_grocery_sales_forecasting

./: .gitignore  20251205_2013_2014_store_2000_item_cyc_features_tcn_all_dl_past_future_covs_metrics.csv  README.md  pyproject.toml  pytest.ini  requirements.txt  test_mav_ratio.py  test_none_type_conversion_fix.py
code/: model_utils.py  test_model.py
config/: model.json
docs/: callback_based_sequence_metrics.md  cleanup_unused_parameters.md  enhanced_sequence_model_metrics.md  final_simplified_approach.md  final_unified_system.md  model_types_refactoring.md  sequence_model_fixes.md  simplified_sequence_model_wrapper.md  simplified_train_model_unified.md  unified_lightning_wrapper.md  unified_model_system.md  unified_training_improvements.md
notebook/: 20251003_analysis.ipynb  analysis.ipynb  benchmark_models.ipynb  cluster_approach.ipynb  clustering.ipynb  clustering_1.ipynb  create_features.ipynb  dart_test.ipynb  data_loader.ipynb  load_data.ipynb  lr_finder.ipynb  lr_finder_example.ipynb  medians.ipynb  predict.ipynb  predict_1.ipynb  predict_trbl.ipynb  preprocessing.ipynb  preprocessing_10_10.ipynb  read_data.ipynb  toy_clustering.ipynb  training.ipynb  training_2.ipynb  unified_training_example.ipynb  window_stacking.ipynb
run/: create_store_predictions.py  create_store_sku_cluster_data.sh  run_cluster.sh  run_clustering.py  run_create_X_y_data_loaders.py  run_create_X_y_data_loaders.sh  run_create_X_y_features.py  run_create_X_y_features.sh  run_create_cyc_features.py  run_create_cyc_features.sh  run_create_features.py  run_create_features.sh  run_create_sale_features.py  run_create_sale_features.sh  run_create_store_sku_cluster_data.py  run_data_preprocessing.py  run_data_preprocessing.sh  run_training.py  run_training.sh
script/: ML_benchmark.py  ML_benchmark.sh  benchmark_time_series_models.py  benchmark_time_series_models.sh  build_growth_features_for_clustering.py  build_growth_features_for_clustering.sh  cluster.py  cluster.sh  cluster_bt.py  cluster_bt.sh  (+61 more)
(+42 files in other folders)
