[tool.poetry]
authors = ["Unknown <unknown@example.com>"]
description = "Favorita Grocery Sales Forecasting"
name = "favorita-grocery-sales"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "<2.0"
openpyxl = "^3.1.5"
pandas = ">=2.0.0"
python = ">=3.10,<4.0"
scikit-learn = "*"
torch = "2.2.2"
torchvision = "0.17.2"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
lightning = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
package-mode = "false"
requires = ["poetry-core>=1.5.0"]
