[tool.poetry]
authors = ["Unknown <unknown@example.com>"]
description = "Favorita Grocery Sales Forecasting"
name = "favorita-grocery-sales"
version = "0.1.0"

[tool.poetry.dependencies]
lightning = "^2.2.1"
litmodels = "^0.1.8"
matplotlib = "^3.10.3"
numpy = "<2.0"
openpyxl = "^3.1.5"
pandas = ">=2.0.0"
python = ">=3.10,<3.13"
scikit-learn = "*"
seaborn = "^0.13.2"
torch = "2.2.2"
torchvision = "0.17.2"
pipreqs = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
package-mode = "false"
requires = ["poetry-core>=1.5.0"]
